name:           BiobaseBlast
version:        0.1.1.0
author:         Christian Hoener zu Siederdissen
maintainer:     choener@bioinf.uni-leipzig.de
homepage:       https://github.com/choener/BiobaseBlast
bug-reports:    https://github.com/choener/BiobaseBlast/issues
copyright:      Christian Hoener zu Siederdissen, 2013 - 2015
category:       Bioinformatics
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
tested-with:    GHC == 7.8.4, GHC == 7.10.1
synopsis:       BLAST-related tools
description:
                This library contains BLAST-related functionality:
                .
                - Parsers for BLOSUM and PAM matrices.
                - Specialized substitution functions for (in)complete amino
                  acid / nucleotide triplet substitution.
                - Incomplete nucleotide patterns map one or two nucleotides to
                  an amino acid (need for indel editing in the mitochondria of
                  certain species like /p.polycephalum/).
                .
                The matrices are currently not provided but can be found here:
                <ftp://ftp.ncbi.nih.gov/blast/matrices/>



extra-source-files:
  changelog



library
  build-depends: base             >= 4.7      && < 4.9
               , aeson            >= 0.8      && < 0.9
               , binary           >= 0.7      && < 0.8
               , BiobaseTypes     >= 0.1.1    && < 0.1.2
               , BiobaseXNA       >= 0.9.1    && < 0.9.3
               , cereal           >= 0.4      && < 0.5
               , containers
               , deepseq          >= 1.3      && < 1.5
               , PrimitiveArray   >= 0.6      && < 0.7
               , vector           >= 0.10     && < 0.11
               , vector-th-unbox  >= 0.2      && < 0.3

  default-language:
    Haskell2010
  default-extensions: DeriveGeneric
                    , MultiParamTypeClasses
                    , TemplateHaskell
                    , TypeFamilies
                    , TypeOperators
  exposed-modules:
    Biobase.SubstMatrix
    Biobase.SubstMatrix.Import

  ghc-options:
    -O2



source-repository head
  type: git
  location: git://github.com/choener/BiobaseBlast

